{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 77,
  "lineage": "2446427d-aeeb-f0d0-0c51-a331c85d6b90",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "dev_allow_ssh_hub",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-09-16T00:56:09.035-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dev-core-infra/global/firewalls/dev-hub-allow-ssh",
            "log_config": [],
            "name": "dev-hub-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-hub-vpc-k8s",
            "priority": 1000,
            "project": "dev-core-infra",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/firewalls/dev-hub-allow-ssh",
            "source_ranges": [
              "123.208.86.179/32"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.dev-hub-vpc-k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "dev_allow_ssh_spoke",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-09-16T00:56:32.942-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dev-core-infra/global/firewalls/dev-spoke-allow-ssh",
            "log_config": [],
            "name": "dev-spoke-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-spoke-vpc-k8s",
            "priority": 1000,
            "project": "dev-core-infra",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/firewalls/dev-spoke-allow-ssh",
            "source_ranges": [
              "123.208.86.179/32"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.dev-spoke-vpc-k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "hubvms",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20200907",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/disks/srvr02"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr02",
            "instance_id": "3107307531145083869",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "R2gwueGGw4c=",
            "name": "srvr02",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-hub-vpc-k8s",
                "network_ip": "10.25.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-hub-provisioner-subnet",
                "subnetwork_project": "dev-core-infra"
              }
            ],
            "project": "dev-core-infra",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr02",
            "service_account": [
              {
                "email": "681647773579-compute@developer.gserviceaccount.com"
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "australia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.dev-hub-vpc-k8s",
            "google_compute_subnetwork.vm-hub-provisioner-subnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20200907",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/disks/srvr07"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr07",
            "instance_id": "6434763852365986781",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "R2gwueGGw4c=",
            "name": "srvr07",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-hub-vpc-k8s",
                "network_ip": "10.25.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-hub-provisioner-subnet",
                "subnetwork_project": "dev-core-infra"
              }
            ],
            "project": "dev-core-infra",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr07",
            "service_account": [
              {
                "email": "681647773579-compute@developer.gserviceaccount.com"
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "australia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.dev-hub-vpc-k8s",
            "google_compute_subnetwork.vm-hub-provisioner-subnet"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20200907",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/disks/srvr13"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr13",
            "instance_id": "4193885560693881821",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "R2gwueGGw4c=",
            "name": "srvr13",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-hub-vpc-k8s",
                "network_ip": "10.25.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-hub-provisioner-subnet",
                "subnetwork_project": "dev-core-infra"
              }
            ],
            "project": "dev-core-infra",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr13",
            "service_account": [
              {
                "email": "681647773579-compute@developer.gserviceaccount.com"
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "australia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.dev-hub-vpc-k8s",
            "google_compute_subnetwork.vm-hub-provisioner-subnet"
          ]
        },
        {
          "index_key": 28,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2004-focal-v20200907",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/disks/srvr29"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr29",
            "instance_id": "255717471603686365",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "R2gwueGGw4c=",
            "name": "srvr29",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-hub-vpc-k8s",
                "network_ip": "10.25.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-hub-provisioner-subnet",
                "subnetwork_project": "dev-core-infra"
              }
            ],
            "project": "dev-core-infra",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/zones/australia-southeast1-a/instances/srvr29",
            "service_account": [
              {
                "email": "681647773579-compute@developer.gserviceaccount.com"
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "australia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.dev-hub-vpc-k8s",
            "google_compute_subnetwork.vm-hub-provisioner-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "dev-hub-vpc-k8s",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/dev-core-infra/global/networks/dev-hub-vpc-k8s",
            "name": "dev-hub-vpc-k8s",
            "project": "dev-core-infra",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-hub-vpc-k8s"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "dev-spoke-vpc-k8s",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/dev-core-infra/global/networks/dev-spoke-vpc-k8s",
            "name": "dev-spoke-vpc-k8s",
            "project": "dev-core-infra",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-spoke-vpc-k8s"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s-nodes-subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-16T00:56:33.323-07:00",
            "gateway_address": "10.30.1.1",
            "id": "projects/dev-core-infra/regions/australia-southeast1/subnetworks/k8s-nodes-subnet",
            "ip_cidr_range": "10.30.1.0/24",
            "name": "k8s-nodes-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-spoke-vpc-k8s",
            "private_ip_google_access": false,
            "project": "dev-core-infra",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/regions/australia-southeast1/subnetworks/k8s-nodes-subnet"
          },
          "dependencies": [
            "google_compute_network.dev-spoke-vpc-k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vm-hub-provisioner-subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-16T00:56:09.416-07:00",
            "gateway_address": "10.25.0.1",
            "id": "projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-hub-provisioner-subnet",
            "ip_cidr_range": "10.25.0.0/28",
            "name": "vm-hub-provisioner-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-hub-vpc-k8s",
            "private_ip_google_access": false,
            "project": "dev-core-infra",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-hub-provisioner-subnet"
          },
          "dependencies": [
            "google_compute_network.dev-hub-vpc-k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vm-spoke-provisioner-subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-09-16T00:56:33.190-07:00",
            "gateway_address": "10.30.2.1",
            "id": "projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-spoke-provisioner-subnet",
            "ip_cidr_range": "10.30.2.0/28",
            "name": "vm-spoke-provisioner-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/global/networks/dev-spoke-vpc-k8s",
            "private_ip_google_access": false,
            "project": "dev-core-infra",
            "region": "australia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-core-infra/regions/australia-southeast1/subnetworks/vm-spoke-provisioner-subnet"
          },
          "dependencies": [
            "google_compute_network.dev-spoke-vpc-k8s"
          ]
        }
      ]
    }
  ]
}